<resources>
    <string name="app_name">Eloquence</string>
    <string name="tts">Play</string>
    <string name="stt">Record</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hearing_loss">Describe about Hearing Problems else type NA</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_not_match">Password not matched</string>
    <string name="error_invalid_password">Password should be minimum 6 characters!</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="start">Start</string>
    <string name="progress">How am I doing?</string>
    <string name="illustrate">How do I play?</string>
</resources>
