<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignIn">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="30sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="117dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/login_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="0sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/login_signin_btn"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:lineSpacingExtra="24sp"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginpg_register_btn"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/action_register"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>