<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="0sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:fontFamily="monospace"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="#ffff"
                android:fontFamily="monospace"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textAlignment="center"

                android:textSize="20sp"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/hearing_loss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#ffff"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/hearing_loss"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
            android:id="@+id/loginpage_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:fontFamily="monospace"
            android:text="Register"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

            <Button
                android:id="@+id/registerpage_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:text="Register"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>